# coffee-scale

./: .clang-format  .gitignore  CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
include/: button.h  display.h  display_data.h  err_gpio.h  err_nvs.h  error.h  nau7802.h  nvs.h  scale.h
src/: button.c  button.h  display.c  error.h  loadcell.c  loadcell.h  main.c  nau7802.c  nvs.c  nvs.h  scale.c
